package eapli.base.RecruitmentProcessManagement;

public class RecruitmentProcess {
}
