package eapli.base.customermanagement.dto;

public class CustomerDTO {
}
