@startuml Domain Model
left to right direction

'=== CustomerManager Aggregate ===
Entity CustomerManager


'=== Candidate Aggregate ===
package Candidate_Aggregate{

    Entity Candidate <<Aggregate Root>>{
    }

    Class Email <<Identity>><<Value Object>>{
    }

    Class Password  <<Value Object>>{
        }
    Class Name <<Value Object>> {}
    Class PhoneNumber <<Value Object>> {}


    Candidate --> Email
    Candidate -->  Password
    Candidate --> Name
    Candidate --> PhoneNumber
}

'=== JobApplication Aggregate ===
package JobApplication_Aggregate{

    Entity JobApplication <<Aggregate Root>>{
    }

    class JobApplicationState <<Value Object>>{
    }
    Entity RequirementsAnswers
    Entity RequirementsScore
    Entity InterviewModelAnswers
    Entity InterviewModelScore

   JobApplication  --> "1…*" RequirementsAnswers
   JobApplication  --> "1" RequirementsScore
   JobApplication  --> JobApplicationState
    JobApplication --> "1…*" InterviewModelAnswers
    JobApplication  --> "1" InterviewModelScore

}

Entity RequirementsEvaluation <<Service>>
Entity InterviewModelEvaluation <<Service>>

'=== RequirementSpecifications Aggregate ===
package RequirementSpecifications_Aggregate{
    Entity RequirementSpecifications <<Aggregate Root>>{}
    Class Title <<Identity>><<Value Object>>{}
    Class JobRequirement <<Value Object>> {}
    Class FileName <<Value Object>>
    RequirementSpecifications --> "1" Title
    RequirementSpecifications -> "1" FileName
    RequirementSpecifications --o "1...*"JobRequirement
}

'=== InterviewModel Aggregate ===
package InterviewModel_Aggregate{

    Entity InterviewModel <<Aggregate Root>>{
    }

    Class Title <<Identity>> <<Value Object>>{
    }
    Class FileName <<Value Object>> {}
    Class Question <<Value Object>>{
    }
    InterviewModel --> "1" Title
    InterviewModel --* "1...*"Question
    InterviewModel --> "1" FileName
}


'=== RequirmentProcess Aggregate ===
package RecruitmentProcess_Aggregate{
    Entity RecruitmentProcess <<Aggregate Root>>{
    }
    Enum Phases<<Enum>>{}
    Class Phase <<Value Object>> {}
    Class Period <<Value Object>> {}
    RecruitmentProcess o-- "1...5" Phase
    Phase -->  "1" Phases
    Phase --> Period
}



'=== JobOpening Aggregate ===
package JobOpening_Aggregate{
    Entity JobOpening <<Aggregate Root>>{}
    Class JobReference <<Identity>><<ValueObject>>
    Class Title <<Value Object>>{}
    Enum ContractType <<Enum>><<Value Object>> {}
    Enum Mode <<Enum>><<Value Object>> {}
    Class Address <<Value Object>>{}
    Class NumberVacancies <<Value Object>>{}
    Class Description <<Value Object>> {}

    JobOpening --> JobReference
    JobOpening --> Title
    JobOpening --> ContractType
    JobOpening --> Mode
    JobOpening --> Address
    JobOpening --> NumberVacancies
    JobOpening --> Description
}

'=== Company/Customer Aggregate ===
package Customer_Aggregate{

    Entity Customer <<Aggregate Root>>{
    }

    Class Email <<Identity>> <<Value Object>>{
    }
    Class Password <<Value Object>>{
    }
    Class Name <<Value Object>>{}
    Class Address <<Value Object>>{
        }
    Class Acronym <<Value Object>>{
    }

    Customer --> "1" Email
    Customer --> "1" Password
    Customer --> "1" Address
    Customer --> "1" Acronym
    Customer --> "1" Name
}

Entity ApplicationsFileBot<<Service>> {}
ApplicationsFileBot ..> JobApplication
RequirementsAnswers <.. RequirementsEvaluation
RequirementsScore <.. RequirementsEvaluation
InterviewModelAnswers <.. InterviewModelEvaluation
InterviewModelScore <.. InterviewModelEvaluation
JobApplication "1...*" --* "1" JobOpening
JobApplication "1..." o-- "1" Candidate
JobOpening --> "1" InterviewModel
JobOpening --> "1" RecruitmentProcess
JobOpening --> "1" Customer : Company
JobOpening --> "1" RequirementSpecifications
CustomerManager --> "0...*" JobOpening
@enduml